feat: add host field to event response
